page styling cont. Made pins more visible, used grid/flexbox in correct places

--- a/src/components/ImageUploader/ImageUploader.scss
+++ b/src/components/ImageUploader/ImageUploader.scss
@@ -3,13 +3,6 @@ $accent: #ffce4a;
 $border: #2a2a2a;
 $hover: #1d1d1d;
 .image-uploader {
-    // width: 100%;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // gap: 0.75rem;
-    // font-size: 0.85rem;
-    // padding: 5px;
     display:contents; // participates in parent grid (.control-row)
 }
 
@@ -25,25 +18,15 @@ $hover: #1d1d1d;
 input[type=file] {
     max-width: 100%;
     color: #444;
-    //padding: 5px;
-    // background: #fff;
     border-radius: 10px;
     border: 1px solid #555;
 
 }
 
 input[type=file]::file-selector-button {
-    // margin-right: 20px;
-    // border: none;
-    // // background: #084cdf;
-    // padding: 10px 20px;
-    // border-radius: 10px;
-    // // color: #fff;
-    // cursor: pointer;
-    // transition: background .2s ease-in-out;
     background: $bg;
     border: 1px solid $border;
-    padding: .55rem 1.05rem;
+    padding: .5rem 1rem;
     font-size: 0.8rem;
     color: #ddd;
     border-radius: 8px;
